--- a/project_final/project/myapp/package.json
+++ b/project_final/project/myapp/package.json
@@ -9,6 +9,7 @@
     "a11y-react-emoji": "^1.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "bootstrap-less": "^3.3.8",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
